--- a/Views/Products/Phone.cshtml
+++ b/Views/Products/Phone.cshtml
@@ -67,7 +67,7 @@
                                     @*chip*@
                                     <li id="chip"><p>Chip&nbsp<span id="chip-name">@item.Processor.Name</span></p></li>
                                     @*ram, rom*@
-                                    <li id="storage"><p>RAM&nbsp<span id="ram">@item.Ram.Capacity</span>&nbspGB,&nbspROM&nbsp<span id="rom">@item.Ram.Capacity</span>&nbspGB</p></li>
+                                    <li id="storage"><p>RAM&nbsp<span id="ram">@item.Ram.Capacity</span>&nbspGB,&nbspROM&nbsp<span id="rom">@item.Rom.Capacity</span>&nbspGB</p></li>
                                     @*camera trước*@
                                     <li id="front-cam"><p>Camera trước:&nbsp<span id="cam1">@item.Camera.FCamRes</span></p></li>
                                     @*camera sau*@
