--- a/Views/Products/Tablet.cshtml
+++ b/Views/Products/Tablet.cshtml
@@ -8,7 +8,7 @@
     <link href="@Url.Content("/css/views/home/productlist.css")" rel="stylesheet" type="text/css" />
 }
 <main>
-    <style>
+@*    <style>
         .card-body > p {
             text-align: center;
             font-size: 12px;
@@ -23,37 +23,30 @@
                 color: black;
                 font-weight: 500;
             }
-    </style>
+    </style>*@
     <div class="container" style="justify-content: center">
         <div class="mb-3">
             <div class="d-inline">
-                <a class="btn" id="ipad"><img src="https://cdn.tgdd.vn/Brand/1/iPad-(Apple)522-b_4.jpg" width="90" /></a>
-                <a class="btn" id="samsung"><img src="https://cdn.tgdd.vn/Brand/1/samsungnew-220x48-3.png" width="90" /></a>
-                <a class="btn" id="xiaomi"><img src="https://cdn.tgdd.vn/Brand/1/Tablet-xiaomi-220x48-1.png" width="90" /></a>
-                <a class="btn" id="huawei"><img src="https://cdn.tgdd.vn/Brand/1/Huawei522-b_4.jpg" width="90" /></a>
-                <a class="btn" id="lenovo"><img src="https://cdn.tgdd.vn/Brand/1/Lenovo522-b_6.jpg" width="90" /></a>
-                <a class="btn" id="masstel"><img src="https://cdn.tgdd.vn/Brand/1/Masstel522-b_7.png" width="90" /></a>
+                <a class="btn" id="Apple" asp-controller="Products" asp-action="Category" asp-route-id="23"><img src="https://cdn.tgdd.vn/Brand/1/iPad-(Apple)522-b_4.jpg" width="90" /></a>
+                <a class="btn" id="Samsung" asp-controller="Products" asp-action="Category" asp-route-id="24"><img src="https://cdn.tgdd.vn/Brand/1/samsungnew-220x48-3.png" width="90" /></a>
+                <a class="btn" id="Huawei" asp-controller="Products" asp-action="Category" asp-route-id="26"><img src="https://cdn.tgdd.vn/Brand/1/Huawei522-b_4.jpg" width="90" /></a>
             </div>
         </div>
     </div>
     <div class="highlight">
-        @for (int i = 0; i < 52; i++)
-        {
+        @foreach (var item in Model) {
             <div class="displaying">
                 @*class để hiển thị *@
-                <a href="#">
-                    <div class="card" id="apple">
+                <a asp-action="Details" asp-route-id="@item.ProductId">
+                    <div class="card">
                         @*nhớ add id này để lọc *@
                         <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
-                        <img class="card-img-top" src="https://cdn.tgdd.vn/Products/Images/522/240254/samsung-galaxy-tab-s7-fe-green-600x600.jpg" alt="https://cdn.tgdd.vn/Products/Images/522/240254/samsung-galaxy-tab-s7-fe-green-600x600.jpg">
+                        <img class="card-img-top" src="@item.Picture" alt="@item.Color">
                         <div class="card-body">
-                            @*quà tặng*@
-                            <p><span>Quà tặng 500.000đ</span></p>
-                            <h5 class="card-title">Samsung Galaxy Tab S7 FE 4G</h5>
-                            <h5 class="card-title pricesale m-0">13.990.000</h5>
-                            <h6 class="card-title price text-muted mt-1">14.990.000</h6>
+                            <h6 class="card-title product-name">@item.ProductName</h6>
+                            <h5 class="card-title pricesale m-0">@item.UnitPrice</h5>
+                            <h6 class="card-title price text-muted mt-1">@item.MSRP</h6>
                             <div>
-
                                 <p style="display:inline">
                                     <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                                         <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
@@ -72,6 +65,43 @@
                                     </svg>
                                 </p>
                             </div>
+                            <div class="information">
+                                @*render các thông tin vào thẻ span*@
+                                <ul>
+                                    @*màn hình*@
+                                    <li id="screen"><p>Màn hình&nbsp<span id="inch">@item.Screen.Size</span>&nbspinch</p></li>
+                                    @*chip*@
+                                    <li id="chip"><p>Chip <span id="chip-name">@item.Processor.Name</span></p></li>
+                                    @*ram, rom*@
+                                    <li id="storage"><p><span id="ram">@item.Ram.Capacity</span>&nbspGB,&nbspROM<span id="rom">
+                                        @if (@item.Rom.Capacity == 1024) {<span>1 TB</span>}
+                                        else if (@item.Rom.Capacity == 2048)
+                                        {
+                                            <span>1 TB</span>
+                                        }
+                                        else
+                                        {
+                                            <span>@item.Rom.Capacity GB</span>
+                                        }
+                                    </span></p></li>  
+                                    @*pin*@
+                                    <li id="battery">
+                                        <p>Pin
+                                            <span id="capacity">
+                                                @if (@item.Battery.Capacity == 10)
+                                                {
+                                                    <span>khoảng 10 tiếng</span>
+                                                }
+                                                else if (@item.Battery.Capacity == 0)
+                                                {
+                                                    <span>@item.Battery.Charge W @item.Battery.Type  </span>
+                                                }
+                                                else {<span>@item.Battery.Capacity mAh @item.Battery.Type</span>}
+                                            </span>
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -83,6 +113,7 @@
         $("#tablet").css({ "background-color": "white", "color": "#be1e2d"})
     });
     </script>
+<script src="@Url.Content("~/js/views/product/general.js")"></script>
 </main>
 
 
