--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -76,20 +76,20 @@
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
                             <ul class="nav" style="width: 300px;">
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-macbook-149x40.png" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-asus-149x40.png" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-acer-149x40.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="16"><img src="https://cdn.tgdd.vn/Brand/1/logo-macbook-149x40.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="17"><img src="https://cdn.tgdd.vn/Brand/1/logo-asus-149x40.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="18"><img src="https://cdn.tgdd.vn/Brand/1/logo-acer-149x40.png" width="90" /></a></li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-dell-149x40.png" width="90" /></a>
+                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="19"><img src="https://cdn.tgdd.vn/Brand/1/logo-dell-149x40.png" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-lenovo-149x40.png" width="90" /></a>
+                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="20"><img src="https://cdn.tgdd.vn/Brand/1/logo-lenovo-149x40.png" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-hp-149x40-1.png" width="90" /></a>
+                                     <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="21"><img src="https://cdn.tgdd.vn/Brand/1/logo-hp-149x40-1.png" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-msi-149x40.png" width="90" /></a>
+                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="22"><img src="https://cdn.tgdd.vn/Brand/1/logo-msi-149x40.png" width="90" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -101,18 +101,9 @@
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
                             <ul class="nav" style="width: 300px;">
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/iPad-(Apple)522-b_4.jpg" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/samsungnew-220x48-3.png" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/Tablet-xiaomi-220x48-1.png" width="90" /></a></li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/Huawei522-b_4.jpg" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/Lenovo522-b_6.jpg" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/Masstel522-b_7.png" width="90" /></a>
-                                </li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="23"><img src="https://cdn.tgdd.vn/Brand/1/iPad-(Apple)522-b_4.jpg" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="24"><img src="https://cdn.tgdd.vn/Brand/1/samsungnew-220x48-3.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="26"><img src="https://cdn.tgdd.vn/Brand/1/Huawei522-b_4.jpg" width="90" /></a></li>
                             </ul>
                         </div>
                     </div>
@@ -123,26 +114,20 @@
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
                             <ul class="nav" style="width: 320px;">
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Energizer482-b_44.jpg" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/logo-lg-149x40-1.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="44"><img src="https://cdn.tgdd.vn/Brand/1/Apple9499-b_28.jpg" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="39"><img src="https://cdn.tgdd.vn/Brand/1/LG54-b_17.png" width="90" /></a></li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/samsungnew-220x48-1.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="58"><img src="https://cdn.tgdd.vn/Brand/1/Jabra54-b_17.jpg" width="90" /></a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Huawei522-b_4.jpg" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="59"><img src="https://cdn.tgdd.vn/Brand/1/Mozard54-b_35.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/JBL482-b_46.jpg" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="60"><img src="//cdn.tgdd.vn/Brand/1/logo-xiaomi-220x48-5.png" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Sony482-b_41.jpg" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Apple482-b_37.jpg" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Anker482-b_18.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="67"><img src="https://cdn.tgdd.vn/Brand/1/Belkin54-b_57.jpg" width="90" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -189,35 +174,20 @@
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
                             <ul class="nav" style="width: 280px;">
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Apple482-b_37.jpg" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/logo-asus-149x40.png" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/OPPO42-b_5.jpg" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="46"><img src="https://cdn.tgdd.vn/Brand/1/Apple9499-b_28.jpg" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="54"><img src="https://cdn.tgdd.vn/Brand/1/220-48-220x48-13.jpg" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="61"><img src="https://cdn.tgdd.vn/Brand/1/Rapoo86-s56-160x40-2.png" width="90" /></a></li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/logo-lg-149x40-1.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="62"><img src="https://cdn.tgdd.vn/Brand/1/logo-hyperx-1-220x48-1.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Anker482-b_18.png" width="90" /></a>
+                                     <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="63"><img src="https://cdn.tgdd.vn/Brand/1/Logitech86-b_41.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/Aukey482-b_21.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="65"><img src="https://cdn.tgdd.vn/Brand/1/Energizer57-b_50.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Category/Quicklink/4727/1/190721-052349.jpg" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/samsungnew-220x48-1.png" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/160-40-160x40-16.jpg" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/220-48-220x48-23.jpg" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/logo-xiaomi-220x48-5.png" width="90" /></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/AVA57-b_50.jpg" width="90" /></a>
+                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="66"><img src="https://cdn.tgdd.vn/Brand/1/Xmobile57-b_42.jpg" width="90" /></a>
                                 </li>
                             </ul>
                         </div>
