--- a/Views/Products/Accessories.cshtml
+++ b/Views/Products/Accessories.cshtml
@@ -8,6 +8,9 @@
 }
 <main>
     <style>
+        .card-body {
+            height: 200px;
+        }
         .card-body > p {
             text-align: center;
             font-size: 14px;
@@ -23,43 +26,33 @@
                 font-weight: 500;
             }
     </style>
-    <div class="container" style="justify-content: center">
-        <div class="mb-3">
-            <div class="d-inline">
-                <a class="btn" id="apple"><img src="https://cdn.tgdd.vn/Brand/1/Apple482-b_37.jpg" width="90" /></a>
-                <a class="btn" id="asus"><img src="https://cdn.tgdd.vn/Brand/1/logo-asus-149x40.png" width="90" /></a>
-                <a class="btn" id="oppo"><img src="https://cdn.tgdd.vn/Brand/1/OPPO42-b_5.jpg" width="90" /></a>
-                <a class="btn" id="lg"><img src="https://cdn.tgdd.vn/Brand/1/logo-lg-149x40-1.png" width="90" /></a>
-                <a class="btn" id="anker"><img src="https://cdn.tgdd.vn/Brand/1/Anker482-b_18.png" width="90" /></a>
-                <a class="btn" id="aukey"><img src="https://cdn.tgdd.vn/Brand/1/Aukey482-b_21.png" width="90" /></a>
-
-                <a class="btn" id="totolink"><img src="https://cdn.tgdd.vn/Category/Quicklink/4727/1/190721-052349.jpg" width="90" /></a>
-                <a class="btn" id="samsung"><img src="https://cdn.tgdd.vn/Brand/1/samsungnew-220x48-1.png" width="90" /></a>
-                <a class="btn" id="razer"><img src="https://cdn.tgdd.vn/Brand/1/160-40-160x40-16.jpg" width="90" /></a>
-                <a class="btn" id="belkin"><img src="https://cdn.tgdd.vn/Brand/1/220-48-220x48-23.jpg   " width="90" /></a>
-                <a class="btn" id="xiaomi"><img src="https://cdn.tgdd.vn/Brand/1/logo-xiaomi-220x48-5.png" width="90" /></a>
-                <a class="btn" id="ava"><img src="https://cdn.tgdd.vn/Brand/1/AVA57-b_50.jpg" width="90" /></a>
+         <div class="container" style="justify-content: center">
+            <div class="mb-3">
+                <div class="d-inline">
+                    <a class="btn" id="Apple" asp-controller="Products" asp-action="Category" asp-route-id="46"><img src="https://cdn.tgdd.vn/Brand/1/Apple9499-b_28.jpg" width="90" /></a>
+                    <a class="btn" id="Razer" asp-controller="Products" asp-action="Category" asp-route-id="54"><img src="https://cdn.tgdd.vn/Brand/1/220-48-220x48-13.jpg" width="90" /></a>
+                    <a class="btn" id="Rapoo" asp-controller="Products" asp-action="Category" asp-route-id="61"><img src="https://cdn.tgdd.vn/Brand/1/Rapoo86-s56-160x40-2.png" width="90" /></a>
+                    <a class="btn" id="HyperX" asp-controller="Products" asp-action="Category" asp-route-id="62"><img src="https://cdn.tgdd.vn/Brand/1/logo-hyperx-1-220x48-1.jpg" width="90" /></a>
+                    <a class="btn" id="Logitech" asp-controller="Products" asp-action="Category" asp-route-id="63"><img src="https://cdn.tgdd.vn/Brand/1/Logitech86-b_41.jpg" width="90" /></a>
+                    <a class="btn" id="Energizer" asp-controller="Products" asp-action="Category" asp-route-id="65"><img src="https://cdn.tgdd.vn/Brand/1/Energizer57-b_50.jpg" width="90" /></a>
+                    <a class="btn" id="Xmobile" asp-controller="Products" asp-action="Category" asp-route-id="66"><img src="https://cdn.tgdd.vn/Brand/1/Xmobile57-b_42.jpg" width="90" /></a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="highlight">
-        @for (int i = 0; i < 52; i++)
-        {
+   <div class="highlight">
+        @foreach (var item in Model) {
             <div class="displaying">
                 @*class để hiển thị *@
-                <a href="#">
-                    <div class="card" id="apple">
+                <a asp-action="Details" asp-route-id="@item.ProductId">
+                    <div class="card">
                         @*nhớ add id này để lọc *@
                         <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
-                        <img class="card-img-top" src="https://cdn.tgdd.vn/Products/Images/9499/231934/adapter-sac-24a-ava-asuc62a-trang-7-600x600.jpg" alt="Sạc AVA ASUC62a">
+                        <img class="card-img-top" src="@item.Picture" alt="@item.Color">
                         <div class="card-body">
-                            @*quà tặng*@
-                            @*<p><span>Quà tặng 500.000đ</span></p>*@
-                            <h5 class="card-title">Sạc AVA ASUC62a</h5>
-                            <h5 class="card-title pricesale m-0">48.000</h5>
-                            <h6 class="card-title price text-muted mt-1">120.000</h6>
+                            <h6 class="card-title product-name">@item.ProductName</h6>
+                            <h5 class="card-title pricesale m-0">@item.UnitPrice</h5>
+                            <h6 class="card-title price text-muted mt-1">@item.MSRP</h6>
                             <div>
-
                                 <p style="display:inline">
                                     <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                                         <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
@@ -83,12 +76,15 @@
                 </a>
             </div>
         }
-    </div>
+    </div>    
+
     <script>
         $(document).ready(function () {
             $("#accessories").css({ "background-color": "white", "color": "#be1e2d" })
         });
     </script>
+<script src="@Url.Content("~/js/views/product/general.js")"></script>
+
 </main>
 
 
