--- a/wwwroot/css/views/home/productlist.css
+++ b/wwwroot/css/views/home/productlist.css
@@ -111,3 +111,21 @@ h6.price {
     border: 1px solid white;
     box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
 }
+
+.rom-ram {
+    margin: 0px;
+    font-size: 12px;
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+
+.rom-ram > span {
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 3px;
+    margin-left: 3px;
+    margin-right: 3px;
+    color: black;
+}
+
